--- a/style.css
+++ b/style.css
@@ -194,7 +194,7 @@ button {
     padding: .7rem 1.3rem;
     font-weight: 600;
     font-size: 1rem;
-    width: 150px;
+    width: 160px;
     border: 2px solid var(--clr-pry-green);
     border-radius: 50vw;
     cursor: pointer;
@@ -268,9 +268,10 @@ header {
 
 .navbar-collapse {
     position: fixed;
-    margin-top: var(--scroll-padding, 3.6rem);
-    background: var(--clr-black-header);
     width: 100%;
+    background: var(--clr-black-header);
+    /* top: var(--scroll-padding, 3.6rem); */
+    top: 3.68rem;
     left: 0;
     /* z-index: -11; */
 }
@@ -330,8 +331,10 @@ header {
 
 /* Nav Desktop/tablet view */
 @media (min-width: 550px) {
+
     .navbar {
         padding-block: .6rem;
+        align-items: center;
     }
 
     .navbar-toggler {
@@ -386,9 +389,9 @@ header {
     list-style: none;
 } */
 
-.navbar .nav-item {
+/* .navbar .nav-item { */
     /* margin-left: ; */
-}
+/* } */
 
 /* BACKDROP STYLING */
 /* .backdrop {
@@ -662,6 +665,7 @@ nav ul li a:hover {
     height: 100%;
     display: flex;
     align-items: center;
+    padding-top: 4rem;
 }
 
 .hero-flex {
@@ -738,7 +742,7 @@ nav ul li a:hover {
 
 .hero-right-text button {
     margin-top: 2rem;
-    min-width: 155px;
+    min-width: 160px;
 }
 
 @media (max-width: 1150px) {
@@ -809,24 +813,6 @@ nav ul li a:hover {
     }
 }
 
-/* @media (max-height: 750px) {
-
-    .hero-flex {
-        gap: 2.2rem;
-    }
-
-    #hero p {
-        line-height: 1.4;
-    }
-
-
-    #hero .hero-flex ul li img {
-        width: 25px;
-        height: auto;
-    }
-
-} */
-
 @media (max-width: 450px) {
     #hero {
         height: unset;
@@ -834,7 +820,7 @@ nav ul li a:hover {
     }
 
     #hero .container {
-        padding-top: 4rem;
+        padding-top: 6.5rem;
         display: block;
     }
     
